remove unused imports code formatting
git-svn-id: http://svn.codehaus.org/qdox/trunk/qdox@1452 96a0d7f9-151b-0410-ba26-d816ff112d2f